syntax = "proto3";
package eventmessages;
option go_package = "eventmessages";
option java_package = "com.factom.factomd.eventmessages";

import "events/eventmessages/generalTypes.proto";
import "events/eventmessages/adminBlock.proto";
import "events/eventmessages/factoidBlock.proto";
import "events/eventmessages/entryCredit.proto";
import "google/protobuf/timestamp.proto";


enum EventSource {
    COMMIT_DIRECTORY_BLOCK = 0;
    ADD_TO_PROCESSLIST = 1;
    ADD_TO_HOLDING = 2;
    DROP_FROM_HOLDING = 3;
    PROCESS_EVENT = 4;
    NODE_EVENT = 5;
}


message FactomEvent {
    EventSource eventSource = 1;
    Hash IdentityChainID = 2;
    oneof value {
        AnchoredEvent anchorEvent = 3;
        CommitChain commitChain = 4;
        CommitEntry commitEntry = 5;
        RevealEntry revealEntry = 6;
        ProcessMessage processEvent = 7;
        NodeMessage nodeEvent = 8;
    }
}


message AnchoredEvent {
    DirectoryBlock directoryBlock = 1;
    AdminBlock adminBlock = 2;
    FactoidBlock factoidBlock = 3;
    EntryCreditBlock entryCreditBlock = 4;
    repeated EntryBlock entryBlocks = 5;
    repeated EntryBlockEntry entryBlockEntries = 6;
}


message DirectoryBlock {
    DirectoryBlockHeader header = 1;
    repeated Entry entries = 2;
}

message DirectoryBlockHeader {
    Hash bodyMerkleRoot = 1;
    Hash previousKeyMerkleRoot = 2;
    Hash previousFullHash = 3;
    google.protobuf.Timestamp timestamp = 4;
    uint32 blockHeight = 5;
    uint32 blockCount = 6;
}

message EntryBlock {
    EntryBlockHeader entryBlockHeader = 1;
    repeated Hash entryHashes = 2;
}

message EntryBlockHeader {
    Hash bodyMerkleRoot = 1;
    Hash chainID = 2;
    Hash previousFullHash = 3;
    Hash previousKeyMerkleRoot = 4;
    uint32 blockHeight = 5;
    uint32 blockSequence = 6;
    uint32 entryCount = 7;
}

message EntryBlockEntry {
    Hash hash = 1;
    repeated ExternalId externalIDs = 2;
    Content content = 3;
}

message Entry {
    Hash chainID = 1;
    Hash keyMerkleRoot = 2;
}

message RevealEntry {
    EntryBlockEntry entry = 1;
    google.protobuf.Timestamp timestamp = 2;
}

enum Level {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
}


enum ProcessMessageCode {
    OTHER_P = 0;
    NEW_BLOCK = 1;
    NEW_MINUTE = 2;
}


message ProcessMessage {
    ProcessMessageCode messageCode = 1;
    Level level = 2;
    string messageText = 3;
}


enum NodeMessageCode {
    OTHER_N = 0;
    STARTED = 1;
    SYNC_COMPLETE = 2;
    SHUTDOWN = 3;
}

message NodeMessage {
    NodeMessageCode messageCode = 1;
    Level level = 2;
    string messageText = 3;
}
